--- a/Week1/Prgm1_Exploring_NLTK.ipynb
+++ b/Week1/Prgm1_Exploring_NLTK.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -11,9 +12,21 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/akash1331/nlp/blob/main/Week1/Prgm1_Exploring_NLTK.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -25,13 +38,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EtxN3KW0YOKw",
-        "outputId": "92980ccf-a534-4bab-cc9a-b29464978ad3"
+        "outputId": "c833ec17-9ed7-4590-bd5f-a5cec4e3f8e2"
       },
       "outputs": [
         {
@@ -86,9 +99,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8kMwV0qNa_hp",
-        "outputId": "30550c33-c46f-4f7f-eda5-025083764cbc"
+        "outputId": "8c3836e7-077f-4664-9ab5-67d3d8d083cc"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,9 +134,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rHbgS2HPbX7o",
-        "outputId": "757be2a5-31f2-4fab-f67e-c8ab2fc33d15"
+        "outputId": "37859010-6601-4aa9-db30-a891ff269958"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +158,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 3
         }
       ]
     },
@@ -170,9 +183,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mNIYEAH-beR0",
-        "outputId": "b84a1f67-5bf3-4ef8-dc3e-f211ce928b58"
+        "outputId": "06716494-9c41-4677-8f28-66d5ac7f8551"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,9 +218,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pDw3jMPkcLuB",
-        "outputId": "957afae6-779f-4e52-d877-88d97babd161"
+        "outputId": "c57e0cae-3caf-4ce9-87a2-cf37c8bb3877"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -226,7 +239,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 5
         }
       ]
     },
@@ -251,9 +264,9 @@
           "height": 339
         },
         "id": "1RMlOk3DcqBQ",
-        "outputId": "6a6ccd7a-4a23-46f0-a617-d962c9a4bbf9"
+        "outputId": "98159898-ff65-49ed-f7a1-3e99314ab00c"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -271,11 +284,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fe21f09cf10>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fdef7365700>"
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 6
         }
       ]
     },
@@ -304,9 +317,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JZDa8LF3dnSu",
-        "outputId": "febb7306-9cd7-4529-ba55-91267aecd99e"
+        "outputId": "a2fc9632-31f9-4a4c-cc65-1062d1f6f2a9"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,9 +353,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_NzGaMyVeQ98",
-        "outputId": "7a17d729-b624-4c82-b941-0740d4b39d8b"
+        "outputId": "7b7781bc-6a43-43b9-b207-ea8e7f5478ed"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -361,7 +374,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 8
         }
       ]
     },
@@ -376,9 +389,9 @@
           "height": 344
         },
         "id": "eB60a_TEedlO",
-        "outputId": "7f7c0c13-ad45-44f7-ccdf-ab90aecc0cbf"
+        "outputId": "e1412de2-71d5-48bc-ed3d-387dbcf564e9"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -396,11 +409,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fe21eb87e50>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fdef7149d90>"
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 9
         }
       ]
     },
@@ -418,7 +431,30 @@
       "source": [
         "import nltk\n",
         "nltk.download('stopwords')\n",
-        "\n",
+        "from nltk.corpus import stopwords"
+      ],
+      "metadata": {
+        "id": "qOZZ6LOLa-Uj",
+        "outputId": "ae5bea9a-20d1-44fb-9338-f4854e5f304d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "stopwords=stopwords.words(\"english\")\n",
         "print (stopwords)\n",
         "\n",
@@ -436,9 +472,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2QL-CZZIerRY",
-        "outputId": "79402abb-59e3-42c1-8b63-1739220b0a3f"
+        "outputId": "8d051eaf-a462-4dcc-9301-a9b126521e32"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,14 +485,6 @@
             "\n",
             "\n",
             "51\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
           ]
         }
       ]
@@ -481,9 +509,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g3gNX1-rfxGZ",
-        "outputId": "24d51b4a-cda7-4b61-cf0a-d9771c172e2f"
+        "outputId": "50d11e64-b738-4cf3-8abf-916ea4f2031d"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -502,7 +530,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 15
         }
       ]
     },
@@ -517,9 +545,9 @@
           "height": 351
         },
         "id": "VMTlppzhgCaQ",
-        "outputId": "3317d3ef-b2d1-4252-a9af-96f2443b441f"
+        "outputId": "fa1d007c-3a3b-4aa8-c61b-97184426bea2"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -537,11 +565,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fe21eac47c0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fdef6c42e50>"
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 16
         }
       ]
     },
